[metadata]
name = sparselabel
version = 0.0.1
author = Axel Henningsson
author_email = nilsaxelhenningsson@gmail.com
description = Label 3D sparse data blocks using by finding the connected components of the related directed graph.
long_description = file: README.md
long_description_content_type = text/x-rst
url = https://github.com/AxelHenningsson/sparselabel
project_urls =
    Documentation = https://AxelHenningsson.github.io/sparselabel/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8,<3.11
